2006-08-25  Gary Benson  <gbenson@redhat.com>

	gnu/testlet/java/net/SocketPermission/implies.java:
	Add many more host checks, and catch exceptions within checks.

2006-08-25  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/SocketPermission/argument.java: Also test
	unquoted IPv6 addresses.

2006-08-24  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/image/ColorConvertOp/createCompatibleDestImage.java:
	(colorModelTest): Add tests for value of transferType.
	(simpleTest): Add tests for value of transferType.
	* gnu/testlet/java/awt/image/ConvolveOp/createCompatibleDestImage.java,
	* gnu/testlet/java/awt/image/ConvolveOp/createCompatibleDestRaster.java,
	* gnu/testlet/java/awt/image/ConvolveOp/filterImage.java: New tests.
	* gnu/testlet/java/awt/image/ConvolveOp/filter.java: Renamed to filterRaster.java.
	* gnu/testlet/java/awt/image/ConvolveOp/filterRaster.java: Renamed from filter.java.

2006-08-23  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/ColorClass/brighter: New file.

2006-08-22  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/MenuShortcut/testToString: New file.

2006-08-18  Mario Torre  <neugens@limasoftware.net>

	* gnu/testlet/java/text/DecimalFormat/parse.java (test): 
	added new tests.
	* gnu/testlet/java/text/DecimalFormat/applyPattern.java (test):
	fixed checkpoint for "grouping" test.

2006-08-18  Francis Kung  <fkung@redhat.com>
	* gnu/testlet/java/awt/image/ColorConvertOp/createCompatibleDestImage.java:
	(colorModelTest): Expand tests.
	(profileTest): Expand tests.
	(test): Clean up looping.
	* gnu/testlet/java/awt/image/ColorConvertOp/createCompatibleDestRaster.java:
	(colorModelTest): Expand tests.
	(profileTest): Expand tests.
	(test): Clean up looping.
	* gnu/testlet/java/awt/image/ColorConvertOp/filterImage.java:
	(test3): Remove test of feature that is not implemented yet.

2006-08-17  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/dnd/DropTargetDropEvent/Constructors.java: