@@ -1,3 +1,12 @@
+2006-08-29  Mario Torre  <neugens@limasoftware.net>
+
+	* gnu/testlet/java/text/DecimalFormat/formatExp.java (test):
+	added new tests.
+	* gnu/testlet/java/text/DecimalFormat/parse.java (test):
+	added new tests.
+	* gnu/testlet/java/text/DecimalFormat/format.java (testGeneral): 
+	added new tests.
+	
 2006-08-25  Gary Benson  <gbenson@redhat.com>
 
 	gnu/testlet/java/net/SocketPermission/implies.java:
